tests/test_assets/semantic/invalid/mutation/statement_only_returns.cog
assignment_return::() -> i32 {
    x: i32 = 0;
    return x = 1;
}

increment_return::() -> i32 {
    x: i32 = 0;
    return x++;
}